updated employee entity along with modified application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.servlet.context-path=/employee_management
 spring.application.name=employee_management
 
-spring.profiles.active=prod
-server.port=8437
+spring.profiles.active=local
+server.port=8432
 
 #logs.dir="/Users/deepakkumar/Documents/testing"
 #log.file.name="employee_management"
