--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<tag />
 		<url />
 	</scm>
-	
+
 	<properties>
 		<java.version>21</java.version>
 		<mysql-connector.version>8.0.33</mysql-connector.version>
@@ -52,6 +52,10 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-connector.version}</version>
 		</dependency>
+		<!--<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
