Adding basic spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.datasource.password=Rashmi##2704@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql:true
 
+
+#spring-security
+#spring.security.user.name=deepak
+#spring.security.user.password=Deepak@432
+
+
